--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <div class = "footer-item">
                     <h3 class = "footer-head">about us</h3>
                     <div class = "icon">
-                        <img src = "images/logo.png">
+                        <img src = "images/logo11.png">
                     </div>
                     <p class = "text text-md">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis saepe incidunt fugiat optio corporis ea!</p>
                     <address>
